<resources>
    <string name="app_name">Game Backlog</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">addActivity</string>
    <string name="platform_hint">Platform</string>
    <string name="title_hint">Title</string>
    <string name="day_hint">Day</string>
    <string name="month_hint">Month</string>
    <string name="year_hint">Year</string>
    <string name="release">Release: %1s</string>
</resources>
