<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.addActivity.AddActivity"
    tools:showIn="@layout/activity_add">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="5dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:textColor="#85FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textStyle="italic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#85FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/platform_hint" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start|fill_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:textColor="#85FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/day_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:textColor="#85FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/month_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>